[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["lilinghai <lilinghai@gmail.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
tempfile = "3.0.7"
walkdir = "2.2.7"
